kg schema applied

--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -11,12 +11,12 @@
      "output_type": "stream",
      "text": [
       "연결 시도 중...\n",
-      "URI: None\n",
-      "Username: None\n",
-      "Database: None\n",
+      "URI: neo4j+s://0d1c14b7.databases.neo4j.io\n",
+      "Username: neo4j\n",
+      "Database: neo4j\n",
       "\n",
-      "❌ 연결 실패!\n",
-      "에러: URI scheme b'' is not supported. Supported URI schemes are ['bolt', 'bolt+ssc', 'bolt+s', 'neo4j', 'neo4j+ssc', 'neo4j+s']. Examples: bolt://host[:port] or neo4j://host[:port][?routing_context]\n"
+      "✅ 연결 성공!\n",
+      "메시지: Hello, Neo4j!\n"
      ]
     }
    ],
@@ -443,6 +443,118 @@
     "    \n",
     "    driver.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1u86lpl4k4eh",
+   "source": "# Understanding Neo4j - Graph Database Fundamentals\n\n## Core Concepts\n\n**Nodes** - Entities in your graph (e.g., User, Product, Category)\n- Have labels (types): `(:User)`, `(:Product)`\n- Have properties: `{name: \"Alice\", age: 30}`\n\n**Relationships** - Connections between nodes\n- Always have a direction: `(a)-[:KNOWS]->(b)`\n- Have a type: `PURCHASED`, `REVIEWED`, `IN_CATEGORY`\n- Can have properties: `[:PURCHASED {quantity: 2, date: \"2024-01-01\"}]`\n\n**Properties** - Key-value pairs on nodes and relationships\n\n## Cypher Query Language Patterns\n\n```cypher\n-- Find nodes\nMATCH (n:Label) RETURN n\n\n-- Find relationships  \nMATCH (a)-[r:TYPE]->(b) RETURN a, r, b\n\n-- Create nodes\nCREATE (n:Label {property: value})\n\n-- Create relationships\nMATCH (a:Label1), (b:Label2)\nCREATE (a)-[:RELATIONSHIP]->(b)\n```",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "7s1768ph77w",
+   "source": "# Setup: Create a reusable query runner\nfrom neo4j import GraphDatabase\nimport os\nfrom dotenv import load_dotenv\n\nload_dotenv()\n\ndriver = GraphDatabase.driver(\n    os.getenv(\"NEO4J_URI\"),\n    auth=(os.getenv(\"NEO4J_USERNAME\"), os.getenv(\"NEO4J_PASSWORD\"))\n)\n\ndef run(query, params=None):\n    \"\"\"Execute a Cypher query and return results as list of dicts\"\"\"\n    with driver.session(database=os.getenv(\"NEO4J_DATABASE\")) as session:\n        result = session.run(query, params or {})\n        return [dict(record) for record in result]\n\nprint(\"✅ Driver ready\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "das536y648i",
+   "source": "## 1. Exploring the Graph Schema\n\nFirst, let's see what types of nodes and relationships exist in our database.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "hyrp7s2x14",
+   "source": "# Get all node labels in the database\nlabels = run(\"CALL db.labels()\")\nprint(\"📦 Node Labels:\")\nfor label in labels:\n    print(f\"  - {label['label']}\")\n\n# Get all relationship types\nrel_types = run(\"CALL db.relationshipTypes()\")\nprint(\"\\n🔗 Relationship Types:\")\nfor rel in rel_types:\n    print(f\"  - {rel['relationshipType']}\")\n\n# Get database schema visualization\nschema = run(\"\"\"\n    CALL db.schema.visualization()\n    YIELD nodes, relationships\n    RETURN nodes, relationships\n\"\"\")\nprint(\"\\n📊 Schema loaded (visualize in Neo4j Browser for best view)\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eqe12gfvaj",
+   "source": "## 2. Basic MATCH Patterns\n\nThe `MATCH` clause is the heart of Cypher - it describes patterns to find in your graph.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "wnp6jh11kyq",
+   "source": "# Pattern 1: Find all nodes of a type\nusers = run(\"MATCH (u:User) RETURN u.name AS name, u.email AS email LIMIT 5\")\nprint(\"👤 First 5 Users:\")\nfor u in users:\n    print(f\"  {u['name']} ({u['email']})\")\n\n# Pattern 2: Find nodes with specific properties\nprint(\"\\n🔍 Find user by ID:\")\nuser = run(\"MATCH (u:User {userId: 1}) RETURN u.name AS name, u.joinedAt AS joined\")\nprint(f\"  {user[0] if user else 'Not found'}\")\n\n# Pattern 3: Use WHERE for complex filtering\nprint(\"\\n💰 Products over 100,000원:\")\nexpensive = run(\"\"\"\n    MATCH (p:Product) \n    WHERE p.price > 100000 \n    RETURN p.name AS name, p.price AS price \n    ORDER BY p.price DESC \n    LIMIT 5\n\"\"\")\nfor p in expensive:\n    print(f\"  {p['name']}: ₩{p['price']:,.0f}\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "zfdly7ih6zd",
+   "source": "## 3. Relationship Traversal\n\nRelationships are what make graph databases powerful - they let you traverse connections naturally.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "hopanghd7wr",
+   "source": "# Traverse: User -> PURCHASED -> Product\nprint(\"🛒 What did User 1 purchase?\")\npurchases = run(\"\"\"\n    MATCH (u:User {userId: 1})-[r:PURCHASED]->(p:Product)\n    RETURN p.name AS product, r.quantity AS qty, r.totalPrice AS total\n    ORDER BY r.purchasedAt DESC\n\"\"\")\nfor p in purchases[:5]:\n    print(f\"  {p['product']} (qty: {p['qty']}, ₩{p['total']:,.0f})\")\n\n# Traverse: Product -> IN_CATEGORY -> Category\nprint(\"\\n📂 Products in '전자제품' category:\")\nproducts = run(\"\"\"\n    MATCH (p:Product)-[:IN_CATEGORY]->(c:Category {name: '전자제품'})\n    RETURN p.name AS name, p.price AS price\n    LIMIT 5\n\"\"\")\nfor p in products:\n    print(f\"  {p['name']}: ₩{p['price']:,.0f}\")\n\n# Multi-hop traversal: User -> Product -> Category\nprint(\"\\n🔄 Categories that User 1 shops in:\")\ncategories = run(\"\"\"\n    MATCH (u:User {userId: 1})-[:PURCHASED]->(p:Product)-[:IN_CATEGORY]->(c:Category)\n    RETURN DISTINCT c.name AS category, count(p) AS products_bought\n    ORDER BY products_bought DESC\n\"\"\")\nfor c in categories:\n    print(f\"  {c['category']}: {c['products_bought']} products\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "n7p958awgi",
+   "source": "## 4. Aggregations\n\nUse `count()`, `sum()`, `avg()`, `collect()` to aggregate data across your graph.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "fuffo8cnbz8",
+   "source": "# Count purchases per user\nprint(\"📊 Top buyers:\")\nbuyers = run(\"\"\"\n    MATCH (u:User)-[r:PURCHASED]->()\n    RETURN u.name AS user, \n           count(r) AS purchases,\n           sum(r.totalPrice) AS total_spent\n    ORDER BY total_spent DESC\n    LIMIT 5\n\"\"\")\nfor b in buyers:\n    print(f\"  {b['user']}: {b['purchases']} purchases, ₩{b['total_spent']:,.0f}\")\n\n# Average rating per product\nprint(\"\\n⭐ Best rated products:\")\nratings = run(\"\"\"\n    MATCH (p:Product)<-[r:REVIEWED]-()\n    WITH p, avg(r.rating) AS avg_rating, count(r) AS num_reviews\n    WHERE num_reviews >= 2\n    RETURN p.name AS product, \n           round(avg_rating * 10) / 10 AS rating,\n           num_reviews AS reviews\n    ORDER BY rating DESC\n    LIMIT 5\n\"\"\")\nfor r in ratings:\n    print(f\"  {r['product']}: {r['rating']}⭐ ({r['reviews']} reviews)\")\n\n# Collect into lists\nprint(\"\\n📝 Products purchased by User 1 (as list):\")\ncollected = run(\"\"\"\n    MATCH (u:User {userId: 1})-[:PURCHASED]->(p:Product)\n    RETURN collect(p.name) AS products\n\"\"\")\nif collected:\n    print(f\"  {collected[0]['products'][:5]}...\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "entqpq3p6av",
+   "source": "## 5. Recommendation Patterns\n\nGraph databases excel at recommendations - finding connections through multiple hops.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "fa0131fjee",
+   "source": "# Collaborative filtering: \"Users who bought X also bought Y\"\nprint(\"🎯 Collaborative Filtering - Similar purchases:\")\nprint(\"   Users who bought what User 1 bought, also bought:\")\n\nsimilar = run(\"\"\"\n    // Find what User 1 purchased\n    MATCH (u1:User {userId: 1})-[:PURCHASED]->(p:Product)\n    \n    // Find other users who purchased the same products\n    MATCH (other:User)-[:PURCHASED]->(p)\n    WHERE other <> u1\n    \n    // Find what those users also purchased (that User 1 hasn't)\n    MATCH (other)-[:PURCHASED]->(rec:Product)\n    WHERE NOT (u1)-[:PURCHASED]->(rec)\n    \n    RETURN rec.name AS recommended, \n           count(DISTINCT other) AS common_buyers\n    ORDER BY common_buyers DESC\n    LIMIT 5\n\"\"\")\nfor s in similar:\n    print(f\"  {s['recommended']} ({s['common_buyers']} similar users)\")\n\n# Content-based: Same category recommendations\nprint(\"\\n📦 Content-Based - Same category products:\")\ncategory_recs = run(\"\"\"\n    MATCH (u:User {userId: 1})-[:PURCHASED]->(p:Product)-[:IN_CATEGORY]->(c:Category)\n    WITH u, c, count(p) AS affinity\n    ORDER BY affinity DESC\n    LIMIT 1\n    \n    MATCH (rec:Product)-[:IN_CATEGORY]->(c)\n    WHERE NOT (u)-[:PURCHASED]->(rec)\n    RETURN rec.name AS product, c.name AS category, rec.price AS price\n    LIMIT 5\n\"\"\")\nfor r in category_recs:\n    print(f\"  {r['product']} ({r['category']}) - ₩{r['price']:,.0f}\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be8ng4ew1h",
+   "source": "## 6. Path Finding & Variable Length Patterns\n\nFind paths of any length using `*` syntax - powerful for exploring connections.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "m9tdl2sgo",
+   "source": "# Variable length path: Find connection between two users through purchases\nprint(\"🔗 Connection between User 1 and User 2 through shared products:\")\npaths = run(\"\"\"\n    MATCH path = (u1:User {userId: 1})-[:PURCHASED]->(p:Product)<-[:PURCHASED]-(u2:User {userId: 2})\n    RETURN u1.name AS user1, p.name AS shared_product, u2.name AS user2\n    LIMIT 3\n\"\"\")\nfor p in paths:\n    print(f\"  {p['user1']} ←→ {p['shared_product']} ←→ {p['user2']}\")\n\n# Shortest path\nprint(\"\\n📍 Shortest path between two users:\")\nshortest = run(\"\"\"\n    MATCH (u1:User {userId: 1}), (u2:User {userId: 10})\n    MATCH path = shortestPath((u1)-[*]-(u2))\n    RETURN [n IN nodes(path) | \n        CASE \n            WHEN n:User THEN 'User:' + n.name \n            WHEN n:Product THEN 'Product:' + n.name\n            WHEN n:Category THEN 'Category:' + n.name\n        END\n    ] AS path_nodes\n\"\"\")\nif shortest:\n    print(f\"  {' → '.join(shortest[0]['path_nodes'])}\")\n\n# Count connections at each depth\nprint(\"\\n📊 User 1's network at different depths:\")\ndepths = run(\"\"\"\n    MATCH (u:User {userId: 1})-[:PURCHASED]->(p:Product)\n    WITH count(DISTINCT p) AS direct_products\n    \n    MATCH (u:User {userId: 1})-[:PURCHASED]->(:Product)<-[:PURCHASED]-(other:User)\n    WHERE other <> u\n    WITH direct_products, count(DISTINCT other) AS connected_users\n    \n    RETURN direct_products, connected_users\n\"\"\")\nif depths:\n    d = depths[0]\n    print(f\"  Depth 1: {d['direct_products']} products purchased\")\n    print(f\"  Depth 2: {d['connected_users']} users with shared purchases\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hsjiexu7len",
+   "source": "## 7. Key Cypher Clauses Reference\n\n| Clause | Purpose | Example |\n|--------|---------|---------|\n| `MATCH` | Find patterns | `MATCH (n:User)` |\n| `WHERE` | Filter results | `WHERE n.age > 21` |\n| `RETURN` | Output results | `RETURN n.name` |\n| `CREATE` | Create nodes/relationships | `CREATE (n:User {name: 'Bob'})` |\n| `MERGE` | Create if not exists | `MERGE (n:User {id: 1})` |\n| `SET` | Update properties | `SET n.name = 'Alice'` |\n| `DELETE` | Remove nodes/relationships | `DELETE n` |\n| `WITH` | Chain query parts | `WITH n, count(*) AS c` |\n| `ORDER BY` | Sort results | `ORDER BY n.name DESC` |\n| `LIMIT` | Limit results | `LIMIT 10` |\n| `UNWIND` | Expand lists to rows | `UNWIND [1,2,3] AS x` |",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "eljckn8qcf",
+   "source": "# Cleanup: Close the driver connection\ndriver.close()\nprint(\"✅ Driver closed\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   }
  ],
  "metadata": {
