test dotenv correctly loaded

--- a/tests/test_kg.ipynb
+++ b/tests/test_kg.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to Neo4j!\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '..')\n",
@@ -61,7 +69,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clearing all data from database!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized: 61 nodes, 60 relationships\n"
+     ]
+    }
+   ],
    "source": [
     "# Uncomment to initialize (clears existing data!)\n",
     "# stats = client.initialize(clear_first=True)\n",
