--- a/tests/test_kg.ipynb
+++ b/tests/test_kg.ipynb
@@ -100,9 +100,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Nodes: 61\n",
+      "Total Relationships: 60\n",
+      "\n",
+      "Nodes by Label:\n",
+      "  Document: 3\n",
+      "  Implementation: 16\n",
+      "  Method: 25\n",
+      "  Principle: 11\n",
+      "  Standard: 3\n",
+      "  StandardVersion: 3\n",
+      "\n",
+      "Relationships by Type:\n",
+      "  ADDRESSES: 37\n",
+      "  COMPLIES_WITH: 2\n",
+      "  HAS_VERSION: 3\n",
+      "  IMPLEMENTS: 10\n",
+      "  INTEGRATES_WITH: 3\n",
+      "  PROPOSES: 3\n",
+      "  USES: 2\n"
+     ]
+    }
+   ],
    "source": [
     "stats = client.get_stats()\n",
     "\n",
@@ -125,9 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 12 paths\n",
+      "\n",
+      "Grounding <- GraphRAG <- [microsoft/graphrag]\n",
+      "Grounding <- Retrieval-Augmented Generation <- [LangChain, LlamaIndex]\n",
+      "Memory <- MemGPT <- [Mem0]\n",
+      "Memory <- Temporal KG Memory <- [Zep]\n",
+      "Multi-Agent Collaboration <- CAMEL <- [AutoGen]\n",
+      "Multi-Agent Collaboration <- MetaGPT <- [CrewAI]\n",
+      "Planning <- MemGPT <- [Mem0]\n",
+      "Planning <- MetaGPT <- [CrewAI]\n",
+      "Planning <- Workflow Graph Orchestration <- [LangGraph]\n",
+      "Reasoning <- ReAct <- [LangChain, LangGraph]\n"
+     ]
+    }
+   ],
    "source": [
     "paths = client.get_principle_method_impl_paths()\n",
     "\n",
@@ -148,9 +193,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Principle Coverage (Methods / Implementations):\n",
+      "\n",
+      "Planning                  | M: 7 #######\n",
+      "                          | I: 3 ***\n",
+      "Reasoning                 | M: 7 #######\n",
+      "                          | I: 2 **\n",
+      "Reflection                | M: 5 #####\n",
+      "                          | I: 0 \n",
+      "Grounding                 | M: 5 #####\n",
+      "                          | I: 3 ***\n",
+      "Memory                    | M: 4 ####\n",
+      "                          | I: 2 **\n",
+      "Tool Use & Action         | M: 4 ####\n",
+      "                          | I: 3 ***\n",
+      "Learning                  | M: 3 ###\n",
+      "                          | I: 0 \n",
+      "Multi-Agent Collaboration | M: 2 ##\n",
+      "                          | I: 2 **\n",
+      "Perception                | M: 0 \n",
+      "                          | I: 0 \n",
+      "Guardrails                | M: 0 \n",
+      "                          | I: 0 \n",
+      "Tracing                   | M: 0 \n",
+      "                          | I: 0 \n"
+     ]
+    }
+   ],
    "source": [
     "coverage = client.get_principles_coverage()\n",
     "\n",
